<resources>
    <string name="app_name">SafeSpace_App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Lorem Ipsum</string>
    <string name="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sodales convallis viverra. Morbi non commodo erat. Donec vitae laoreet turpis, eu rutrum augue. Sed egestas urna quis purus iaculis facilisis.</string>
    <string name="para2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sodales convallis viverra. Morbi non commodo erat. Donec vitae laoreet turpis, eu rutrum augue. Sed egestas urna quis purus iaculis facilisis.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sodales convallis viverra. Morbi non commodo erat. Donec vitae laoreet turpis, eu rutrum augue. Sed egestas urna quis purus iaculis facilisis.</string>
    <string name="name">John Doe</string>
    <string name="email">abc@students.nu-fairview.edu.ph</string>
    <string name="number">0900 000 0000</string>
    <string name="date">Month 00</string>
    <string name="room">Room 000</string>
    <string name="program">--program--</string>
    <string name="yearlevel">Nth Year Student</string>
    <string name="timerange">0:00 AM to\n0:00 AM</string>
    <string name="timerange2">0:00 AM to 0:00 AM</string>
    <string name="forgotverify">
        Please check your inbox and enter the\n
        verification code below to verify your\n
        student email address.\n
        \n
        The code will expire in 5 minutes
    </string>
    <string name="cancel">
        Are you sure you want to cancel this Session with [otheruser] on Month 0, 2025 for 0:00 AM - 0:00 AM?
    </string>
    <string name="peer">
        Start pairing to start a conversation with one\n
        of our Peer Facilitators to share, heal, and\n
        grow through meaningful talks!\n
        \n
        You matter, and we want nothing but to\n
        create and provide a safe space for you!
    </string>
    <string name="emailverify">
        Student Email\n
        Verification
    </string>
    <string name="longlorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend pharetra odio vel cursus. Aliquam sit amet placerat massa. Fusce sit amet urna vestibulum, hendrerit tortor ac, tempus augue. Nam aliquam justo quis ligula tempus, eget feugiat risus sodales. Proin a velit quam. Nam mollis pretium tortor non viverra. Vivamus vitae condimentum purus, a venenatis ipsum. Duis dignissim elementum arcu, vitae vestibulum orci euismod nec. Pellentesque quis lacinia turpis.
        \n\nVestibulum eget metus sed enim aliquet tincidunt. Donec tempus nulla dignissim, vestibulum enim non, sagittis leo. Phasellus sollicitudin eros ac pulvinar egestas. Praesent nec ultrices sem. Integer dapibus mi id semper feugiat. Ut blandit egestas metus, ac tincidunt lacus egestas at. Fusce aliquet magna pretium, maximus leo eu, eleifend lorem. Nullam quis urna elementum, accumsan dui non, sodales ex. Vivamus quis magna dolor. Fusce eu imperdiet purus, vel tincidunt sem. Aenean auctor, neque vel tristique accumsan, dolor massa tempus augue, vel tincidunt massa tellus ac augue. Sed mollis turpis vel lorem auctor, non laoreet eros blandit. Integer hendrerit gravida interdum. Nunc iaculis ac nulla id malesuada. Nunc tristique auctor metus ornare molestie.
        \n\nSed maximus ipsum et ipsum placerat, non tincidunt elit pretium. Pellentesque vehicula ultricies scelerisque. Duis eleifend, mauris in facilisis bibendum, nunc est accumsan mauris, id ornare dui diam eu tortor. Duis mattis neque ut turpis eleifend sagittis. Cras non est interdum, commodo mi non, viverra orci. Mauris a justo quam. Curabitur ac tempor leo.
        \n\nSuspendisse porta tincidunt urna ut aliquet. Morbi eu risus nulla. Praesent pharetra molestie dui vel laoreet. Nullam odio dui, varius vitae elit quis, accumsan sollicitudin dui. Quisque ultrices gravida dui, id interdum enim scelerisque in. Nullam sed convallis magna. Sed ante diam, commodo sit amet posuere sed, dapibus id est. Nulla molestie scelerisque neque, a placerat nisl cursus eu.
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend pharetra odio vel cursus. Aliquam sit amet placerat massa. Fusce sit amet urna vestibulum, hendrerit tortor ac, tempus augue. Nam aliquam justo quis ligula tempus, eget feugiat risus sodales. Proin a velit quam. Nam mollis pretium tortor non viverra. Vivamus vitae condimentum purus, a venenatis ipsum. Duis dignissim elementum arcu, vitae vestibulum orci euismod nec. Pellentesque quis lacinia turpis.
        \n\nVestibulum eget metus sed enim aliquet tincidunt. Donec tempus nulla dignissim, vestibulum enim non, sagittis leo. Phasellus sollicitudin eros ac pulvinar egestas. Praesent nec ultrices sem. Integer dapibus mi id semper feugiat. Ut blandit egestas metus, ac tincidunt lacus egestas at. Fusce aliquet magna pretium, maximus leo eu, eleifend lorem. Nullam quis urna elementum, accumsan dui non, sodales ex. Vivamus quis magna dolor. Fusce eu imperdiet purus, vel tincidunt sem. Aenean auctor, neque vel tristique accumsan, dolor massa tempus augue, vel tincidunt massa tellus ac augue. Sed mollis turpis vel lorem auctor, non laoreet eros blandit. Integer hendrerit gravida interdum. Nunc iaculis ac nulla id malesuada. Nunc tristique auctor metus ornare molestie.
        \n\nSed maximus ipsum et ipsum placerat, non tincidunt elit pretium. Pellentesque vehicula ultricies scelerisque. Duis eleifend, mauris in facilisis bibendum, nunc est accumsan mauris, id ornare dui diam eu tortor. Duis mattis neque ut turpis eleifend sagittis. Cras non est interdum, commodo mi non, viverra orci. Mauris a justo quam. Curabitur ac tempor leo.
    </string>
    <string name="counselingform">
        This is intended for students who wish to\n
        schedule a counseling from the Guidance and Counseling Office.\n
        \n
        Rest assured that all detaills provided is kept confidential and for GCO’s perusal only.\n
        \n
        You matter, and we want nothing but to create and provide a safe space for you!
    </string>
    <string name="peerform">
        This is intended for students who wish to\n
        schedule a peer support session with the\n
        GCO’s Fullbright Peer Facilitators.\n
        \n
        Rest assured that all detaills provided is kept confidential and for GCO’s perusal only.\n
        \n
        You matter, and we want nothing but to create and provide a safe space for you!
    </string>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_peers">Peer</string>
    <string name="title_support">Support</string>
    <string name="title_profile">Profile</string>
    <string name="counselingbtn">
        Guidance Counseling\nSession
    </string>
    <string name="sessionbtn">
        Peer Support\nSession
    </string>
    <string name="sessionbtn2">
        Peer Support\nSession Schedule
    </string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="confidential">
        All conversations are strictly confidential. Peer Facilitators can only view your preferred name for conversational purposes.
    </string>
    <string name="duration">
        The chat session, once started, will automatically end after 24 hours. This time limit applies regardless of when the last message was sent.
    </string>
    <string name="history">
        All messages exchanged during the session are removed after the 24-hour chat duration has ended. The Guidance Counseling Office are the only authorized personnel who can access the chat history for management purposes.
    </string>
    <string name="repair">
        You cannot request a new pairing while an active chat session is ongoing. You can only start pairing again after the previous chat with a Peer has ended.
    </string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main_navigation2">MainNavigation2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_signup">Signup_Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
</resources>