<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.safespace_app.home.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_homeCounseling"
            app:destination="@id/homeCounseling" />
        <action
            android:id="@+id/action_nav_home_to_homePeerSupport"
            app:destination="@id/homePeerSupport" />
    </fragment>

    <fragment
        android:id="@+id/nav_peers"
        android:name="com.example.safespace_app.peers.Peers"
        android:label="@string/title_peers"
        tools:layout="@layout/fragment_peers" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.safespace_app.chat.Chat"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.safespace_app.profile.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/homeCounseling"
        android:name="com.example.safespace_app.home.HomeCounseling"
        android:label="fragment_home_counseling"
        tools:layout="@layout/fragment_home_counseling" >
        <action
            android:id="@+id/action_homeCounseling_to_homeCounselingForm"
            app:destination="@id/homeCounselingForm" />
    </fragment>
    <fragment
        android:id="@+id/homePeerSupport"
        android:name="com.example.safespace_app.home.HomePeerSupport"
        android:label="fragment_home_peer_support"
        tools:layout="@layout/fragment_home_peer_support" >
        <action
            android:id="@+id/action_homePeerSupport_to_homePeerSupportForm1"
            app:destination="@id/homePeerSupportForm1" />
    </fragment>
    <fragment
        android:id="@+id/homeCounselingForm"
        android:name="com.example.safespace_app.home.HomeCounselingForm"
        android:label="fragment_home_counseling_form"
        tools:layout="@layout/fragment_home_counseling_form" />
    <fragment
        android:id="@+id/homePeerSupportForm1"
        android:name="com.example.safespace_app.home.HomePeerSupportForm1"
        android:label="fragment_home_peer_support_form1"
        tools:layout="@layout/fragment_home_peer_support_form1" >
        <action
            android:id="@+id/action_homePeerSupportForm1_to_homePeerSupportForm2"
            app:destination="@id/homePeerSupportForm2" />
    </fragment>
    <fragment
        android:id="@+id/homePeerSupportForm2"
        android:name="com.example.safespace_app.home.HomePeerSupportForm2"
        android:label="fragment_home_peer_support_form2"
        tools:layout="@layout/fragment_home_peer_support_form2" />
</navigation>