<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home2">
    <include app:graph="@navigation/nav_chat" />

    <fragment
        android:id="@+id/nav_home2"
        android:name="com.example.safespace_app.home.Home2"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home2" >
        <action
            android:id="@+id/action_nav_home2_to_homeSessionManagement"
            app:destination="@id/homeSessionManagement" />
        <action
            android:id="@+id/action_nav_home2_to_homeSchedule"
            app:destination="@id/homeSchedule" />
        <action
            android:id="@+id/action_nav_home2_to_homeNewEvent"
            app:destination="@id/homeNewEvent" />
    </fragment>

    <fragment
        android:id="@+id/nav_peers2"
        android:name="com.example.safespace_app.peers.Peers2"
        android:label="@string/title_peers"
        tools:layout="@layout/fragment_peers2" >
        <action
            android:id="@+id/action_nav_peers2_to_chatMessageFragment"
            app:destination="@id/chatMessageFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile2"
        android:name="com.example.safespace_app.profile.Profile2"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile2" >
        <action
            android:id="@+id/action_nav_profile2_to_profInfo2"
            app:destination="@id/profInfo2" />
        <action
            android:id="@+id/action_nav_profile2_to_profNotification2"
            app:destination="@id/profNotification2" />
        <action
            android:id="@+id/action_nav_profile2_to_appTermsAndConditions2"
            app:destination="@id/appTermsAndConditions2" />
        <action
            android:id="@+id/action_nav_profile2_to_appPrivacyPolicy2"
            app:destination="@id/appPrivacyPolicy2" />
        <action
            android:id="@+id/action_nav_profile2_to_profChangeAvatar2"
            app:destination="@id/profChangeAvatar2" />
    </fragment>

    <fragment
        android:id="@+id/profInfo2"
        android:name="com.example.safespace_app.profile.ProfInfo2"
        android:label="fragment_prof_info2"
        tools:layout="@layout/fragment_prof_info2" />
    <fragment
        android:id="@+id/profNotification2"
        android:name="com.example.safespace_app.profile.ProfNotification"
        android:label="fragment_prof_notification"
        tools:layout="@layout/fragment_prof_notification" />
    <fragment
        android:id="@+id/appTermsAndConditions2"
        android:name="com.example.safespace_app.AppTermsAndConditions"
        android:label="fragment_app_terms_and_conditions"
        tools:layout="@layout/fragment_app_terms_and_conditions" />
    <fragment
        android:id="@+id/appPrivacyPolicy2"
        android:name="com.example.safespace_app.AppPrivacyPolicy"
        android:label="fragment_app_privacy_policy"
        tools:layout="@layout/fragment_app_privacy_policy" />
    <fragment
        android:id="@+id/homeSessionManagement"
        android:name="com.example.safespace_app.home.HomeSessionManagement"
        android:label="fragment_home_session_management"
        tools:layout="@layout/fragment_home_session_management" />
    <fragment
        android:id="@+id/homeSchedule"
        android:name="com.example.safespace_app.home.HomeSchedule"
        android:label="fragment_home_schedule"
        tools:layout="@layout/fragment_home_schedule" />
    <fragment
        android:id="@+id/chatMessageFragment"
        android:name="com.example.safespace_app.chat.ChatMessageFragment"
        android:label="ChatMessageFragment" />
    <fragment
        android:id="@+id/homeNewEvent"
        android:name="com.example.safespace_app.home.HomeNewEvent"
        android:label="fragment_home_new_event"
        tools:layout="@layout/fragment_home_new_event" >
        <action
            android:id="@+id/action_homeNewEvent_to_photoManagerFragment"
            app:destination="@id/photoManagerFragment" />
    </fragment>
    <fragment
        android:id="@+id/photoManagerFragment"
        android:name="com.example.safespace_app.home.PhotoManagerFragment"
        android:label="PhotoManagerFragment" />
    <fragment
        android:id="@+id/profChangeAvatar2"
        android:name="com.example.safespace_app.profile.ProfChangeAvatar"
        android:label="fragment_prof_change_avatar"
        tools:layout="@layout/fragment_prof_change_avatar" />
</navigation>